--- a/site/index.html
+++ b/site/index.html
@@ -1,37 +1,84 @@
 <!DOCTYPE html>
-
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <title>NGINX on Railway</title>
-    <meta name="description" content="Choo Choo!" />
-
-    <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <link rel="stylesheet" href="/styles.css?v=1.0" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Blog Details</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
+      crossorigin="anonymous"
+    />
+    <link href="styles.css" rel="stylesheet" />
   </head>
-
   <body>
-    <main>
-      <img
-        src="https://railway.app/brand/logo-light.svg"
-        alt="Railway logo"
-        class="logo"
-      />
+    <div class="main_outer_wrap">
+      <div class="container-fluid">
+        <div class="header">
+          <div class="d-flex justify-content-between align-items-center">
+            <a href="/" class="logo">Logo</a>
+            <a class="btn btn-primary btn-logout" onclick="logout()">
+              Logout
+            </a>
+          </div>
+        </div>
+        <div class="generatated-details">
+          <h3 class="text-center">Generatated Informations</h3>
+          <a href="/generate.html" class="btn btn-primary btn-generate">
+            Generate
+          </a>
 
-      <h1>NGINX on Railway</h1>
+          <table class="table">
+            <thead class="table-light">
+              <tr>
+                <th>Title</th>
+                <th>Description</th>
+              </tr>
+            </thead>
+            <tbody id="prompt_table"></tbody>
+          </table>
+        </div>
+      </div>
+    </div>
 
-      <p>
-        Choo Choo! This is an example of an NGINX static site running on
-        Railway.
-        <a
-          href="https://github.com/railwayapp/starters/tree/master/examples/nginx"
-          >View source</a
-        >.
-      </p>
-    </main>
-
-    <script src="/script.js"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.6.0.js"
+      integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js"
+      integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="script.js"></script>
+    <script>
+      const loadContent = (() => {
+        axios
+          .post(`${api_url}/api/app`, {
+            action: "get",
+            collection: "prompts",
+            params: {},
+          })
+          .then((r) => {
+            let content = "";
+            const table = document.getElementById("prompt_table");
+            console.log(r?.data);
+            r?.data?.data?.map((i) => {
+              content = content + "<tr>";
+              content = content + "<td>";
+              content = content + i?.prompt_title;
+              content = content + "</td>";
+              content = content + "<td>";
+              content = content + i?.choices?.[0]?.message?.content;
+              content = content + "</td>";
+              content = content + "</tr>";
+            });
+            table.innerHTML = content;
+          });
+      })();
+    </script>
   </body>
 </html>
